--- a/module/AmMenu/view/am-menu/am-menu-module/index.phtml
+++ b/module/AmMenu/view/am-menu/am-menu-module/index.phtml
@@ -15,7 +15,7 @@ $this->headTitle($title);
 
                 <div class="box-group" id="menu_accordion">
                     <?php foreach ($entradas as  $i => $entrada) :?>
-                    <div class="panel box box-success" data-id="<?=$entrada->id?>">
+                    <div class="panel box box-success collapsed-box" data-id="<?=$entrada->id?>">
                         <div class="box-header">
                             <h4 class="box-title">
                                 <a data-toggle="collapse" data-parent="#menu_accordion" href="#collapse<?=$i?>">
@@ -26,11 +26,14 @@ $this->headTitle($title);
                                 <?php endif;?>
                                 <a class="btn" href="<?php echo $this->url('administrator',array('module' => 'menu','action'=>'edit', 'id' => $entrada->id));?>"><i class="fa fa-edit"></i></a>
                             </h4>
+                            <div class="box-tools pull-right">
+                                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
+                                </button>
+                            </div>
                         </div>
-                        <div id="collapse<?=$i?>" class="panel-collapse collapse in">
-                            <div class="box-body">
-                                <div class="form-horizontal">
-                                    <ul id="list-submenu-<?=$i?>" class="list-group sub-menu">
+                        <div class="box-body">
+                            <div class="form-horizontal">
+                                <ul id="list-submenu-<?=$i?>" class="list-group sub-menu">
                                     <?php if (count($entrada->hijos) > 0) :?>
                                         <?php foreach ($entrada->hijos as $k => $hijo) :?>
                                             <li class="list-group-item" data-id="<?=$hijo->id?>">
@@ -40,10 +43,9 @@ $this->headTitle($title);
                                             </li>
                                         <?php endforeach; ?>
                                     <?php endif;?>
-                                    </ul>
-                                </div>
-                                <a class="btn btn-sm btn-default" href="<?php echo $this->url('administrator',array('module' => 'menu','action'=>'add', 'id' => $entrada->id, 'data' => ($i + 1)));?>">Añadir submenú de <?=$entrada->texto;?></a>
+                                </ul>
                             </div>
+                            <a class="btn btn-sm btn-default" href="<?php echo $this->url('administrator',array('module' => 'menu','action'=>'add', 'id' => $entrada->id, 'data' => ($i + 1)));?>">Añadir submenú de <?=$entrada->texto;?></a>
                         </div>
                     </div>
                     <?php endforeach;?>
