Estandarizando los nombre de los campos de la base de datos. En principio están en inglés el 99% (alguno falta por ahí). Cambio de nombre del campo "login" de la tabla admin_users (antigua gestor_usuarios) a "username" Nuevo dump de la base de datos incluyendo la configuración mínima

--- a/module/Administrator/view/layout/admin-layout.phtml
+++ b/module/Administrator/view/layout/admin-layout.phtml
@@ -70,7 +70,7 @@ $basePath = $this->basePath() . '/administrator';
 
 
                             <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                            <span class="hidden-xs"><?php echo $userData->login; ?></span>
+                            <span class="hidden-xs"><?php echo $userData->username; ?></span>
                         </a>
                         <ul class="dropdown-menu">
                             <!-- The user image in the menu -->
@@ -78,7 +78,7 @@ $basePath = $this->basePath() . '/administrator';
                                 <?php echo "<img src='$imgPath' class='user-image' alt='User Image'>"; ?>
 
                                 <p>
-                                    <?php echo $userData->login; ?>
+                                    <?php echo $userData->username; ?>
                                     <small>
                                         Sign up date: <?php echo $userData->createdAt; ?><br/>
                                         Last login: <?php echo $userData->lastLogin;?>
@@ -112,7 +112,7 @@ $basePath = $this->basePath() . '/administrator';
                     ?>
                 </div>
                 <div class="pull-left info">
-                    <p><?php echo $userData->login; ?></p>
+                    <p><?php echo $userData->username; ?></p>
                     <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                 </div>
             </div>
