--- a/module/AmLogin/view/am-login/am-login-module/remember-password.phtml
+++ b/module/AmLogin/view/am-login/am-login-module/remember-password.phtml
@@ -21,7 +21,7 @@ $gestorFormRow = $this->gestor_form_row();
 $form->prepare();
 
 echo $this->form()->openTag($form);
-echo $gestorFormRow->render($form->get('login'));
+echo $gestorFormRow->render($form->get('username'));
 echo $gestorFormRow->render($form->get('email')); ?>
 <div class="col-md-offset-9">
     <?php echo $gestorFormRow->render($form->get('submit'));?>
