--- a/module/AmMenu/view/am-menu/am-menu-module/index.phtml
+++ b/module/AmMenu/view/am-menu/am-menu-module/index.phtml
@@ -19,7 +19,7 @@ $this->headTitle($title);
                         <div class="box-header">
                             <h4 class="box-title">
                                 <a data-toggle="collapse" data-parent="#menu_accordion" href="#collapse<?=$i?>">
-                                    <?=$entrada->texto;?>
+                                    <?=$entrada->title;?>
                                 </a>
                                 <?php if (count($entrada->hijos) == 0) :?>
                                     <a class="btn btn-remove" href="<?php echo $this->url('administrator', array('module' => 'menu','action'=>'delete', 'id' => $entrada->id));?>"><i class="fa fa-remove"></i></a>
@@ -39,13 +39,13 @@ $this->headTitle($title);
                                             <li class="list-group-item" data-id="<?=$hijo->id?>">
                                                 <a class="btn btn-remove" href="<?php echo $this->url('administrator', array('module' => 'menu','action' => 'delete', 'id' => $hijo->id));?>"><i class="fa fa-remove"></i></a>
                                                 <a class="btn" href="<?php echo $this->url('administrator', array('module' => 'menu','action' => 'edit', 'id' => $hijo->id));?>"><i class="fa fa-edit"></i></a>
-                                                <?=$hijo->texto;?>
+                                                <?=$hijo->title;?>
                                             </li>
                                         <?php endforeach; ?>
                                     <?php endif;?>
                                 </ul>
                             </div>
-                            <a class="btn btn-sm btn-default" href="<?php echo $this->url('administrator',array('module' => 'menu','action'=>'add', 'id' => $entrada->id, 'data' => ($i + 1)));?>">Añadir submenú de <?=$entrada->texto;?></a>
+                            <a class="btn btn-sm btn-default" href="<?php echo $this->url('administrator',array('module' => 'menu','action'=>'add', 'id' => $entrada->id, 'data' => ($i + 1)));?>">Añadir submenú de <?=$entrada->title;?></a>
                         </div>
                     </div>
                     <?php endforeach;?>
