--- a/module/Application/view/application/home/index.phtml
+++ b/module/Application/view/application/home/index.phtml
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="row home-module">
         <div class="col-md-6 col-xs-12">
-            <img class="img-responsive" src="http://lorempixel.com/g/720/576/" />
+            <img class="img-responsive" src="media/maqueta/home1.png" />
         </div>
         <div class="col-md-6 col-xs-12">
             <h2>Empresa</h2>
@@ -37,12 +37,12 @@
             <a class="btn btn-default">+ Información</a>
         </div>
         <div class="col-md-6 col-xs-12">
-            <img class="img-responsive" src="http://lorempixel.com/g/720/576" />
+            <img class="img-responsive" src="media/maqueta/home2.png" />
         </div>
     </div>
     <div class="row home-module">
         <div class="col-md-6 col-xs-12">
-            <img class="img-responsive" src="http://lorempixel.com/g/720/576" />
+            <img class="img-responsive" src="media/maqueta/home3.png" />
         </div>
         <div class="col-md-6 col-xs-12">
             <h2>Blog</h2>
