--- a/module/Application/view/layout/front-layout.phtml
+++ b/module/Application/view/layout/front-layout.phtml
@@ -15,6 +15,7 @@
                         ->prependStylesheet($this->basePath('absconsultor/css/absconsultor.css'))
                         ->prependStylesheet($this->basePath('absconsultor/vendor/bootstrap/css/bootstrap-theme.min.css'))
                         ->prependStylesheet($this->basePath('absconsultor/vendor/bootstrap/css/bootstrap.min.css'))
+                        ->prependStylesheet($this->basePath('absconsultor/vendor/font-awesome/css/font-awesome.min.css'))
                         ->prependStylesheet('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans')
         ?>
 
@@ -28,7 +29,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img width="150" src="<?php echo $this->basePath('img/white-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;</a>
+                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>">
+                        <img width="150" src="<?php echo $this->basePath('img/white-logo.png') ?>" alt="Logo ABS Consultor"/>
+                    </a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
@@ -44,10 +47,56 @@
         <div class="container-fluid abs">
             <?php echo $this->content; ?>
 
-            <footer>
-                <p>&copy; 2005 - <?php echo date('Y') ?> by Zend Technologies Ltd. <?php echo $this->translate('All rights reserved.') ?></p>
-            </footer>
         </div> <!-- /container -->
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <a href="<?php echo $this->url('home') ?>" class="brand-logo">
+                            <img width="150" src="<?php echo $this->basePath('img/white-logo.png') ?>" alt="Logo ABS Consultor" />
+                        </a>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="footer-menu">
+                            <a>Empresa</a>
+                            <a>Trabajos</a>
+                            <a>Blog</a>
+                            <a>Contacto</a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 text-right contact-info">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p>Síguenos en</p>
+                                <div class="contact-icons">
+                                    <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
+                                    <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook-official"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p>Contáctanos</p>
+                                <div class="contact-icons">
+                                    <a class="phone" href="tel:949335808">659 666 888 <i class="social-icon fa fa-phone"></i></a>
+                                    <a class="mail" href="mailto:info@absconsultor.es">info@absconsultor.es <i class="social-icon fa fa-envelope"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-8">
+                        <a href="">Aviso Legal</a>&nbsp;&nbsp;&nbsp;<a href="">Política de privacidad</a>
+                    </div>
+                </div>
+            </div>
+
+        </footer>
         <!-- Scripts -->
         <?php echo $this->headScript()
             ->prependFile($this->basePath('absconsultor/vendor/bootstrap/js/bootstrap.min.js'))
