Maqueta al 99% (faltan pulir detalles de animación)

--- a/module/Application/view/application/company/index.phtml
+++ b/module/Application/view/application/company/index.phtml
@@ -1,1 +1,78 @@
-empresa
+<div class="row nav-breadcrumb hidden-xs">
+    <div class="container">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item active">Empresa</li>
+        </ol>
+    </div>
+</div>
+
+<div class="container company">
+
+    <article>
+
+        <h1>EMPRESA</h1>
+
+        <img class="img-responsive" src="/media/maqueta/company1.png" />
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et nunc pulvinar dui elementum euismod quis ut elit.
+            Sed cursus et arcu at malesuada. Integer rhoncus congue cursus. Sed dictum viverra egestas. Nulla facilisi.
+            Nam volutpat rhoncus magna non porttitor. Donec euismod vitae velit in sollicitudin. Nam vitae dui pulvinar, lobortis mi a,
+            ultricies ante. Morbi ligula mi, dapibus ac nisi sagittis, placerat mollis erat. Vivamus cursus augue et ex aliquam sollicitudin.
+        </p>
+
+        <p>
+            Cras eleifend, risus sed elementum efficitur, ipsum justo elementum turpis, id dapibus nisl massa non neque.
+            Vivamus et ex sollicitudin, consequat leo vitae, posuere libero. Sed sed sagittis dui, non mollis magna.
+            Nulla convallis rutrum accumsan. Integer fringilla eleifend sapien, et rhoncus mi tristique eu.
+            Maecenas elementum iaculis pretium. Aenean eu tempus eros, vitae vulputate elit. Nulla ultricies est et urna posuere viverra.
+            Suspendisse potenti. Donec non odio massa. Aliquam vitae elementum neque. Integer at neque purus. Mauris venenatis tempor diam,
+            pellentesque gravida lorem accumsan nec. Aenean a luctus purus, non vestibulum turpis.
+        </p>
+
+        <p>
+            Fusce eu lectus et nisi sollicitudin maximus. Etiam sollicitudin ornare justo in eleifend. Donec ac velit massa.
+            Curabitur tincidunt elit velit, vitae hendrerit magna tincidunt eu. Integer nisl tortor,
+            maximus elementum dignissim dignissim, luctus non leo. Nullam luctus elementum sapien, in tincidunt orci.
+            Donec elementum erat nec porta congue.
+        </p>
+
+        <p>
+            Mauris aliquet ac magna a tristique. Donec ac fermentum quam. Vivamus ut porta neque.
+            Aliquam porttitor neque mauris,        id pellentesque ante tempor laoreet. Cras eget nisi massa.
+            Maecenas id feugiat felis. Morbi eu fringilla sapien, quis aliquet magna.
+            Ut id sem in ipsum fringilla porttitor eget sit amet purus. Donec porta ante vitae urna egestas,
+            ultrices pretium ligula mollis. Etiam vitae tincidunt ligula, sed vestibulum leo. Vivamus imperdiet,
+            ante quis pharetra auctor, velit libero suscipit nunc, eu venenatis erat lorem sit amet nisi.
+            Pellentesque sit amet malesuada ligula. Pellentesque lorem est, aliquet in ex non, aliquam tempor lectus.
+            Interdum et malesuada fames ac ante ipsum primis in faucibus.
+        </p>
+
+        <p>
+            Vivamus quis sem congue, placerat libero at, suscipit lorem. Cras quis mauris vitae ex vestibulum eleifend ac dignissim lacus.
+            In volutpat tincidunt nunc, eu consectetur dolor ullamcorper quis. Pellentesque magna erat, laoreet id volutpat sed,
+            ornare vel risus. Phasellus eu lacus sit amet nunc dictum lacinia a id ex. Aliquam eu ultrices elit.
+            Aenean erat libero, placerat quis orci sit amet, vehicula aliquam urna.
+        </p>
+    </article>
+
+    <h3>Nuestros Colaboradores</h3>
+
+    <div id="collaborators_carousel">
+
+        <div class="item">
+            <a href="/empresa/colaboradores#collab1"><img src="/media/maqueta/collab1.png" alt="Collab"></a>
+        </div>
+        <div class="item">
+            <a href="/empresa/colaboradores#collab2"><img src="/media/maqueta/collab2.png" alt="Collab"></a>
+        </div>
+        <div class="item">
+            <a href="/empresa/colaboradores#collab3"><img src="/media/maqueta/collab3.png" alt="Collab"></a>
+        </div>
+        <div class="item">
+            <a href="/empresa/colaboradores#collab4"><img src="/media/maqueta/collab4.png" alt="Collab"></a>
+        </div>
+
+    </div>
+</div>
