--- a/module/Application/view/application/home/index.phtml
+++ b/module/Application/view/application/home/index.phtml
@@ -1,5 +1,18 @@
 <div class="container-fluid home">
     <div class="row">
+        <!--<ul class="bxslider">
+            <li>
+                <div class="video-wrapper">
+                    <video width="100%" autoplay loop>
+                        <source src="/media/video/grua.mp4" type="video/mp4"/>
+                    </video>
+                    <div class="video-filter"></div>
+                </div>
+            </li>
+            <li>
+                <img class="img-responsive" src="/media/maqueta/company1.png" />
+            </li>
+        </ul>-->
         <div class="video-wrapper">
             <video width="100%" autoplay loop>
                 <source src="/media/video/grua.mp4" type="video/mp4"/>
