--- a/module/Application/view/application/job/index.phtml
+++ b/module/Application/view/application/job/index.phtml
@@ -1,1 +1,121 @@
-indice trabajos
+<div class="row nav-breadcrumb hidden-xs">
+    <div class="container">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item active">Trabajos</li>
+        </ol>
+    </div>
+</div>
+
+<div class="container jobs">
+
+    <article>
+
+        <div class="row">
+            <div class="col-md-9">
+
+                <h1>Trabajos</h1>
+
+                <div class="row">
+                    <div class="col-md-12 list-item job">
+                        <div class="row">
+                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/job1.png" /></div>
+                            <div class="col-md-7">
+                                <h2>Trabajo 1</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et nunc pulvinar dui elementum euismod quis ut elit.
+                                    Sed cursus et arcu at malesuada. Integer rhoncus congue cursus. Sed dictum viverra egestas.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-9">
+                                <span>
+                                    <i class="fa fa-tag"></i>
+                                    <a href="/">Implantación ISO</a>
+                                    <a href="/">Reparaciones</a>
+                                </span>
+                            </div>
+                            <div class="col-md-3">
+                                <a href="/trabajos/categorias/trabajo1" class="btn btn-default pull-right">Ver trabajo</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-12 list-item job">
+                        <div class="row">
+                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/job2.png" /></div>
+                            <div class="col-md-7">
+                                <h2>Trabajo 1</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et nunc pulvinar dui elementum euismod quis ut elit.
+                                    Sed cursus et arcu at malesuada. Integer rhoncus congue cursus. Sed dictum viverra egestas.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-9">
+                                <span>
+                                    <i class="fa fa-tag"></i>
+                                    <a href="/">Implantación ISO</a>
+                                    <a href="/">Reparaciones</a>
+                                </span>
+                            </div>
+                            <div class="col-md-3">
+                                <a href="/trabajos/categorias/trabajo2" class="btn btn-default pull-right">Ver trabajo</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-12 list-item job">
+                        <div class="row">
+                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/job3.png" /></div>
+                            <div class="col-md-7">
+                                <h2>Trabajo 3</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et nunc pulvinar dui elementum euismod quis ut elit.
+                                    Sed cursus et arcu at malesuada. Integer rhoncus congue cursus. Sed dictum viverra egestas.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-9">
+                                <span>
+                                    <i class="fa fa-tag"></i>
+                                    <a href="/">Implantación ISO</a>
+                                    <a href="/">Reparaciones</a>
+                                </span>
+                            </div>
+                            <div class="col-md-3">
+                                <a href="/trabajos/categorias/trabajo3" class="btn btn-default pull-right">Ver trabajo</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <aside class="col-md-3">
+                <h3>Categorias</h3>
+                <ul>
+                    <li><a href="/trabajos/reparaciones">REPARACIONES</a></li>
+                    <li><a href="/trabajos/montajes">MONTAJES</a></li>
+                    <li><a href="/trabajos/seguimientos-de-fabricacion">SEGUIMIENTOS DE FABRICACION</a></li>
+                    <li><a href="/trabajos/implantacion-iso-9000">IMPLATACION ISO 9000</a></li>
+                </ul>
+            </aside>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="pagination">
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </article>
+
+</div>
