--- a/module/Application/view/application/blog/index.phtml
+++ b/module/Application/view/application/blog/index.phtml
@@ -1,1 +1,121 @@
-indice blog
+<div class="row nav-breadcrumb hidden-xs">
+    <div class="container">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item active">Blog</li>
+        </ol>
+    </div>
+</div>
+
+<div class="container blog">
+
+    <article>
+
+        <div class="row">
+            <div class="col-md-9">
+
+                <h1>Blog</h1>
+
+                <div class="row">
+                    <div class="col-md-12 list-item job">
+                        <div class="row">
+                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/job1.png" /></div>
+                            <div class="col-md-7">
+                                <h2>Entrada 1</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et nunc pulvinar dui elementum euismod quis ut elit.
+                                    Sed cursus et arcu at malesuada. Integer rhoncus congue cursus. Sed dictum viverra egestas.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-9">
+                                <span>
+                                    <i class="fa fa-tag"></i>
+                                    <a href="/">Implantación ISO</a>
+                                    <a href="/">Reparaciones</a>
+                                </span>
+                            </div>
+                            <div class="col-md-3">
+                                <a href="/blog/categorias/blog1" class="btn btn-default pull-right">Leer más</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-12 list-item job">
+                        <div class="row">
+                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/job2.png" /></div>
+                            <div class="col-md-7">
+                                <h2>Entrada 1</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et nunc pulvinar dui elementum euismod quis ut elit.
+                                    Sed cursus et arcu at malesuada. Integer rhoncus congue cursus. Sed dictum viverra egestas.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-9">
+                                <span>
+                                    <i class="fa fa-tag"></i>
+                                    <a href="/">Implantación ISO</a>
+                                    <a href="/">Reparaciones</a>
+                                </span>
+                            </div>
+                            <div class="col-md-3">
+                                <a href="/blog/categorias/blog2" class="btn btn-default pull-right">Leer más</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-12 list-item job">
+                        <div class="row">
+                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/job3.png" /></div>
+                            <div class="col-md-7">
+                                <h2>Entrada 3</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et nunc pulvinar dui elementum euismod quis ut elit.
+                                    Sed cursus et arcu at malesuada. Integer rhoncus congue cursus. Sed dictum viverra egestas.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-9">
+                                <span>
+                                    <i class="fa fa-tag"></i>
+                                    <a href="/">Implantación ISO</a>
+                                    <a href="/">Reparaciones</a>
+                                </span>
+                            </div>
+                            <div class="col-md-3">
+                                <a href="/blog/categorias/blog3" class="btn btn-default pull-right">Leer más</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <aside class="col-md-3">
+                <h3>Categorias</h3>
+                <ul>
+                    <li><a href="/blog/categoria1">Categoría 1</a></li>
+                    <li><a href="/blog/categoria2">Categoría 2</a></li>
+                    <li><a href="/blog/categoria3">Categoría 3</a></li>
+                    <li><a href="/blog/categoria4">Categoría 4</a></li>
+                </ul>
+            </aside>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="pagination">
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </article>
+
+</div>
