--- a/module/Application/view/application/contact/index.phtml
+++ b/module/Application/view/application/contact/index.phtml
@@ -1,1 +1,66 @@
-contacto
+<div class="row nav-breadcrumb hidden-xs">
+    <div class="container">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item active">Contacto</li>
+        </ol>
+    </div>
+</div>
+
+<div class="container contact">
+    <article>
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Contáctanos</h1>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <form role="form">
+                            <div class="form-group">
+                                <label for="name">Nombre</label>
+                                <input type="name" class="form-control" id="name">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="phone">Teléfono</label>
+                                <input type="phone" class="form-control" id="phone">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="text">Consulta</label>
+                                <textarea class="form-control" id="text" rows="10"></textarea>
+                            </div>
+
+                            <button type="submit" class="btn btn-default">Enviar</button>
+                        </form>
+                    </div>
+                    <div class="col-md-6 contact-info">
+                        <div class="row">
+                            <div class="col-md-12">
+
+                                <h4>REDES SOCIALES</h4>
+                                <div class="contact-icons">
+                                    <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
+                                    <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook-official"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="contact-icons">
+                                    <h4>Telefono</h4><a class="phone" href="tel:949335808">659 666 888</a>
+                                    <h4>Email</h4><a class="mail" href="mailto:info@absconsultor.es">info@absconsultor.es</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
+</div>
