Animacion de la HOME

--- a/module/Application/view/application/home/index.phtml
+++ b/module/Application/view/application/home/index.phtml
@@ -18,6 +18,14 @@
                 <source src="/media/video/grua.mp4" type="video/mp4"/>
             </video>
             <div class="video-filter"></div>
+            <img id="home_brand_logo" src="<?php echo $this->basePath('img/white-logo.png') ?>" alt="Logo ABS Consultor" class="transition"/>
+            <ul class="nav navbar-nav transition">
+                <!--<li class="active"><a href="<?php /*echo $this->url('home') */?>"><?php /*echo $this->translate('Home') */?></a></li>-->
+                <li><a href="/empresa">Empresa</a></li>
+                <li><a href="/trabajos">Trabajos</a></li>
+                <li><a href="/blog">Blog</a></li>
+                <li><a href="/contacto">Contacto</a></li>
+            </ul>
         </div>
     </div>
 </div>
