Adaptando la home y el listado de trabajos con las dimensiones de las imagenes que toma la camara con la que se realizan las fotos de los trabajos. Corregido bug en la librería simple-routing-manager. No se parseaban bien las rutas

--- a/module/Application/view/application/job/index.phtml
+++ b/module/Application/view/application/job/index.phtml
@@ -19,7 +19,7 @@
                 <div class="row">
                     <div class="col-md-12 list-item job">
                         <div class="row">
-                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/job1.png" /></div>
+                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/home1.png" /></div>
                             <div class="col-md-7">
                                 <h2>Trabajo 1</h2>
                                 <p>
@@ -44,7 +44,7 @@
 
                     <div class="col-md-12 list-item job">
                         <div class="row">
-                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/job2.png" /></div>
+                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/home2.png" /></div>
                             <div class="col-md-7">
                                 <h2>Trabajo 1</h2>
                                 <p>
@@ -69,7 +69,7 @@
 
                     <div class="col-md-12 list-item job">
                         <div class="row">
-                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/job3.png" /></div>
+                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/home3.png" /></div>
                             <div class="col-md-7">
                                 <h2>Trabajo 3</h2>
                                 <p>
