--- a/module/Application/view/application/home/index.phtml
+++ b/module/Application/view/application/home/index.phtml
@@ -1,32 +1,47 @@
+<?php
+$this->headLink()->appendStylesheet($this->basePath('absconsultor/css/home.css'))
+?>
 <div class="container-fluid home">
     <div class="row">
-        <!--<ul class="bxslider">
+        <ul class="bxslider">
+            <li>
+                <img src="/media/maqueta/company1.png" />
+                <div class="video-filter"></div>
+            </li>
             <li>
                 <div class="video-wrapper">
-                    <video width="100%" autoplay loop>
+                    <video id="video" width="100%" autoplay loop>
                         <source src="/media/video/grua.mp4" type="video/mp4"/>
                     </video>
                     <div class="video-filter"></div>
                 </div>
             </li>
-            <li>
-                <img class="img-responsive" src="/media/maqueta/company1.png" />
-            </li>
-        </ul>-->
-        <div class="video-wrapper">
+        </ul>
+
+        <img id="home_brand_logo" src="<?php echo $this->basePath('img/white-logo.png') ?>" alt="Logo ABS Consultor" class="transition brand-logo"/>
+        <ul class="nav home-navbar navbar-nav transition">
+            <li><a href="/empresa">Empresa</a></li>
+            <li><a href="/trabajos">Trabajos</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/contacto">Contacto</a></li>
+        </ul>
+
+        <div class="col-xs-12 hidden-sm hidden-xs">
+            <i class="fa fa-chevron-down transition"></i>
+        </div>
+        <!--<div class="video-wrapper">
             <video width="100%" autoplay loop>
-                <source src="/media/video/grua.mp4" type="video/mp4"/>
+                <source src="http://absconsultor.local:8080/media/video/grua.mp4" type="video/mp4"/>
             </video>
             <div class="video-filter"></div>
-            <img id="home_brand_logo" src="<?php echo $this->basePath('img/white-logo.png') ?>" alt="Logo ABS Consultor" class="transition"/>
+            <img id="home_brand_logo" src="<?php /*echo $this->basePath('img/white-logo.png') */?>" alt="Logo ABS Consultor" class="transition"/>
             <ul class="nav navbar-nav transition">
-                <!--<li class="active"><a href="<?php /*echo $this->url('home') */?>"><?php /*echo $this->translate('Home') */?></a></li>-->
                 <li><a href="/empresa">Empresa</a></li>
                 <li><a href="/trabajos">Trabajos</a></li>
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="/contacto">Contacto</a></li>
             </ul>
-        </div>
+        </div>-->
     </div>
 </div>
 
@@ -35,7 +50,20 @@
 <div class="container">
     <div class="row home-module">
         <div class="col-md-6 col-xs-12">
-            <img class="img-responsive" src="media/maqueta/home1.png" />
+            <div class="owl-carousel-home">
+                <div class="item">
+                    <img class="img-responsive" src="media/maqueta/home1.png" />
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="media/maqueta/home1.png" />
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="media/maqueta/home1.png" />
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="media/maqueta/home1.png" />
+                </div>
+            </div>
         </div>
         <div class="col-md-6 col-xs-12">
             <h2>Empresa</h2>
@@ -58,7 +86,20 @@
             <a class="btn btn-default">+ Información</a>
         </div>
         <div class="col-md-6 col-xs-12">
-            <img class="img-responsive" src="media/maqueta/home2.png" />
+            <div class="owl-carousel-home">
+                <div class="item">
+                    <img class="img-responsive" src="media/maqueta/home2.png" />
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="media/maqueta/home2.png" />
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="media/maqueta/home2.png" />
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="media/maqueta/home2.png" />
+                </div>
+            </div>
         </div>
     </div>
     <div class="row home-module">
