--- a/module/Application/view/layout/front-layout.phtml
+++ b/module/Application/view/layout/front-layout.phtml
@@ -24,7 +24,7 @@
 
     </head>
     <body>
-        <nav class="navbar navbar-fixed-top transition" role="navigation">
+        <nav class="navbar navbar-fixed-top transition not-visible" role="navigation">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
