--- a/public/absconsultor/css/absconsultor.css
+++ b/public/absconsultor/css/absconsultor.css
@@ -97,7 +97,7 @@ form input.form-control {
 }
 
 .abs .breadcrumb {
-    padding-top: 160px;
+    padding-top: 130px;
     padding-left: 0;
 }
 
@@ -118,6 +118,15 @@ form input.form-control {
 nav {
     overflow: hidden;
     background-color: rgba(0, 52, 79, 0.9);
+}
+
+
+nav.navbar-fixed-top.not-visible {
+    top: 0px;
+}
+
+nav.navbar-fixed-top.visible {
+    top: 0;
 }
 
 .nav.navbar-nav {
@@ -240,163 +249,11 @@ footer .contact-icons a.mail i {
 }
 
 .transition {
-    -webkit-transition: all .6s ease;
-    -moz-transition: all .6s ease;
-    -ms-transition: all .6s ease;
-    -o-transition: all .6s ease;
-    transition: all .6s ease;
-}
-
-/**
-    HOME
-**/
-
-.bx-wrapper .bx-viewport {
-    border: 0;
-    left: 0;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-}
-
-.bx-wrapper li {
-    left: 0;
-}
-
-.abs > .container-fluid.home {
-    padding-top: 0;
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.abs .video-wrapper {
-    position: relative;
-    overflow: hidden;
-}
-
-.abs .video-wrapper video {
-    margin-top: -150px;
-}
-
-.abs .video-wrapper .nav.navbar-nav{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top:190px;
-    padding:0;
-    margin-left: -172.5px;
-}
-
-.abs .video-wrapper .nav.navbar-nav.header {
-    opacity: 0;
-}
-
-.abs .video-wrapper img {
-    position:  absolute;
-    width: 500px;
-    height: 300px;
-    top: 50%;
-    left: 50%;
-    margin-left: -250px;
-    margin-top: -150px;
-}
-
-.abs .video-wrapper img.header {
-    opacity: 0;
-}
-
-.abs .video-filter {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 99.5%;
-    background-color: rgba(0, 51, 78, 0.5);
-}
-
-.abs .home-module {
-    position: relative;
-}
-
-/* FLECHA IZQUIERDA */
-.home-module:nth-child(odd) > div:nth-child(2):after,
-.home-module:nth-child(odd) > div:nth-child(2):before {
-    right: 100%;
-    top: 50%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-}
-
-.home-module:nth-child(odd) > div:nth-child(2):after {
-    border-color: rgba(255, 255, 255, 0);
-    border-right-color: #ffffff;
-    border-width: 30px;
-    margin-top: -20px;
-}
-.home-module:nth-child(odd) > div:nth-child(2):before {
-    border-color: rgba(255, 255, 255, 0);
-    border-right-color: #ffffff;
-    border-width: 20px;
-    margin-top: -20px;
-}
-
-/* FLECHA DERECHA */
-
-.home-module:nth-child(even) > div:nth-child(2):after,
-.home-module:nth-child(even) > div:nth-child(2):before {
-    left: 0;
-    top: 50%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-}
-
-.home-module:nth-child(even) > div:nth-child(2):after {
-    border-color: rgba(255, 255, 255, 0);
-    border-left-color: #ffffff;
-    border-width: 30px;
-    margin-top: -30px;
-}
-.home-module:nth-child(even) > div:nth-child(2):before {
-    border-color: rgba(255, 255, 255, 0);
-    border-left-color: #FFFFFF;
-    border-width: 20px;
-    margin-top: -20px;
-}
-
-.abs .home-module > div {
-    padding-left: 0;
-    padding-right: 0;
-    height: 100%;
-}
-
-.abs .home-module:nth-child(odd) > div:nth-child(2) {
-    padding-left: 25px;
-}
-
-.abs .home-module h2 {
-    font-family: 'Open Sans Condensed',sans-serif;
-    font-weight: bold;
-    color: #00344F;
-}
-
-.abs .home-module p {
-    height: 225px;
-}
-
-.abs .home-module:nth-child(even) p {
-    padding-right: 25px;
-}
-
-.abs .home-module:nth-child(odd) .btn {
-    float: right;
+    -webkit-transition: opacity .6s ease, top .6s ease;
+    -moz-transition: opacity .6s ease, top .6s ease;
+    -ms-transition: opacity .6s ease, top .6s ease;
+    -o-transition: opacity .6s ease, top .6s ease;
+    transition: opacity .6s ease, top .6s ease;
 }
 
 /** EMPRESA **/
