--- a/public/absconsultor/css/home.css
+++ b/public/absconsultor/css/home.css
@@ -61,7 +61,7 @@
     color: white;
     font-size: 40px;
     text-align: center;
-    width: 100%;
+    left: 50%;
     margin-left: -15px;
     margin-right: -15px;
 }
@@ -79,9 +79,20 @@
     background-color: rgba(0, 51, 78, 0.5);
 }
 
+.abs .video-filter .video-controls {
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
+    font-size: 4em;
+    color: white;
+    z-index: 999;
+    cursor: pointer;
+}
+
 .abs .home-module {
     position: relative;
 }
+
 
 /* FLECHA IZQUIERDA */
 .home-module:nth-child(odd) > div:nth-child(2):after,
@@ -111,8 +122,8 @@
 
 /* FLECHA DERECHA */
 
-.home-module:nth-child(even) > div:nth-child(2):after,
-.home-module:nth-child(even) > div:nth-child(2):before {
+.home-module:nth-child(even) > div:nth-child(1):after,
+.home-module:nth-child(even) > div:nth-child(1):before {
     left: 0;
     top: 30%;
     border: solid transparent;
@@ -123,13 +134,13 @@
     pointer-events: none;
 }
 
-.home-module:nth-child(even) > div:nth-child(2):after {
+.home-module:nth-child(even) > div:nth-child(1):after {
     border-color: rgba(255, 255, 255, 0);
     border-left-color: #ffffff;
     border-width: 30px;
     margin-top: -30px;
 }
-.home-module:nth-child(even) > div:nth-child(2):before {
+.home-module:nth-child(even) > div:nth-child(1):before {
     border-color: rgba(255, 255, 255, 0);
     border-left-color: #FFFFFF;
     border-width: 20px;
@@ -153,7 +164,7 @@
 }
 
 .abs .home-module p {
-    height: 225px;
+    height: 210px;
 }
 
 .abs .home-module:nth-child(even) p {
