LocaleTreeRouteStack ahora hereda directamente de TreeRouteStack (la anterior clase padre parece que no es necesaria para el multiidioma que hemos planteado) Conectando los controladores del back con los controladores del front La librería simple-routing-manager ya no usa el sistema de rutas por url. Para el multiidioma es más conveniente usar el sistema por parámetros en la vista

--- a/module/Application/view/layout/front-layout.phtml
+++ b/module/Application/view/layout/front-layout.phtml
@@ -102,6 +102,7 @@
             </div>
 
         </footer>
+        <input type="hidden" id="simple-routing-manager" name="<?=$srmController;?>" value="<?=$controllerAction;?>" />
         <!-- Scripts -->
         <?php echo $this->headScript()
             ->appendFile($this->basePath('absconsultor/vendor/jquery/jquery.min.js'))
